force-app/main/default/objects/Construction_Stage__c/Construction_Stage__c.object-meta.xml
<CustomObject>
    <label>Construction Stage</label>
    <nameField>
        <label>Construction Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Construction Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>