force-app/main/default/objects/Construction_Stage__c/fields/All_Documents_Submitted__c.field-meta.xml
<CustomField>
    <fullName>All_Documents_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Documents Submitted</label>
    <type>Checkbox</type>
</CustomField>