force-app/main/default/objects/Construction_Stage__c/fields/CA_Certificate__c.field-meta.xml
<CustomField>
    <fullName>CA_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Certificate</label>
    <type>Checkbox</type>
</CustomField>