force-app/main/default/objects/Construction_Stage__c/fields/Stage_Description__c.field-meta.xml
<CustomField>
    <fullName>Stage_Description__c</fullName>
    <label>Stage Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>