force-app/main/default/objects/Construction_Stage__c/fields/Unit_Wise_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Unit_Wise_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Wise Milestone</label>
    <type>Checkbox</type>
</CustomField>